basic website setup

--- a/www/index.html
+++ b/www/index.html
@@ -5,12 +5,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Snagin Stanislav</title>
         
-        <link rel="stylesheet" href="">
-        <link rel="stylesheet" href="dist/css/main.bundle.css" />
+        <link rel="stylesheet" href="dist/lib/bootstrap-5.0.2-dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="dist/style.css" />
     </head>
     <body>
-        <main class="container">
-            
+        <main class="sn_container container-fluid">
+            <div class="row justify-content-center align-items-center g-2">
+                <div class="col-sm-6">
+                    <h1>Stanislav Snagin</h1>
+                    <span>super-puper developer</span>
+                    <blockquote class="blockquote">
+                        <a href="">ссылки</a>
+                        <a href="">ссылки</a>
+                        <a href="">ссылки</a>
+                        <a href="">ссылки</a>
+                        <a href="">ссылки</a>
+                        <a href="">ссылки</a>
+                        <a href="">ссылки</a>
+                        <a href="">ссылки</a>
+                        <a href="">ссылки</a>
+                    </blockquote>
+                </div>
+            </div>
         </main>
     </body>
 </html>
