webpage has been made

--- a/www/index.html
+++ b/www/index.html
@@ -5,26 +5,36 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Snagin Stanislav</title>
         
+        <!-- LIBS -->
         <link rel="stylesheet" href="dist/lib/bootstrap-5.0.2-dist/css/bootstrap.min.css" />
+
+        <!-- FONTS -->
+        <link rel="stylesheet" href="assets/fonts/hack/hack.css" />
+
+        <!-- MAIN SYLESHEET -->
         <link rel="stylesheet" href="dist/style.css" />
     </head>
     <body>
         <main class="sn_container container-fluid">
-            <div class="row justify-content-center align-items-center g-2">
-                <div class="col-sm-6">
-                    <h1>Stanislav Snagin</h1>
-                    <span>super-puper developer</span>
-                    <blockquote class="blockquote">
-                        <a href="">ссылки</a>
-                        <a href="">ссылки</a>
-                        <a href="">ссылки</a>
-                        <a href="">ссылки</a>
-                        <a href="">ссылки</a>
-                        <a href="">ссылки</a>
-                        <a href="">ссылки</a>
-                        <a href="">ссылки</a>
-                        <a href="">ссылки</a>
-                    </blockquote>
+            <div style="margin-top: 50px;" class="g-0 row justify-content-center align-items-center">
+                <div class="text-center col-sm-6" style="background-color: white;">
+                    <div style="padding: 50px;">
+                        <h1><b>Stanislav Snagin</b></h1>
+                        <span>Software Engineer</span>
+                    </div>
+
+                    <p>ITMO University student (2024 - 2028)</p>
+                    
+                    <div class="sn_card row justify-content-center align-items-center g-0">
+                        <div class="col-sm-12">
+                            <div class="d-flex flex-wrap gap-0 b-3">
+                                <button onclick="window.location.href='https://t.me/redsunset6';" role="button" class="button-58-telegram flex-grow-1">TELEGRAM</button>
+                                <button onclick="window.location.href='https://github.com/ssnagin';" role="button" class="button-58-github flex-grow-1">GITHUB</button>
+                            </div>
+                            <br>
+                            <p align="center">- email: <a href="mailto:s_lstoo@bk.ru">s_lstoo@bk.ru</a> -</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
